# Atlas-Capital-Automation

./: README.md
Dylan/WorkflowSynthesisEngine/: Makefile  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  sample_transcript.txt
Dylan/WorkflowSynthesisEngine/cesar_src/: __init__.py  config.py  logging.py
Dylan/WorkflowSynthesisEngine/cesar_src/agents/: base.py  extractor_agent.py  jury_agent.py  orchestrator.py  trinity_agent.py  validator_agent.py  visualizer_agent.py
Dylan/WorkflowSynthesisEngine/cesar_src/automation/: matrix.py
Dylan/WorkflowSynthesisEngine/cesar_src/brains/: data.py  knowledge.py
Dylan/WorkflowSynthesisEngine/cesar_src/cli/: extract.py
Dylan/WorkflowSynthesisEngine/cesar_src/integrations/: __init__.py  autogen_bridge.py  automation_matrix.py  (+3 more)
Dylan/WorkflowSynthesisEngine/docs/: ARCHITECTURE.md  DEPLOYMENT.md  SECURITY.md  WHITEPAPER.md
Dylan/WorkflowSynthesisEngine/external_launchers/: AGENT_INTEGRATION.md  API_GUIDE.md  Quick_Start_Guide.md  Script Launcher Pro - Delivery Notes.md  Script_Launcher_Pro_-_Project_Summary.md  _Features.md  cli_main.py  interactive_mode.py  launcher_engine.py  long_running_task.py  main.py  main_window.py  models.py  monitor_panel.py  register_dialog.py  scheduler.py  script_panel.py  script_registry.py  terminal_widget.py  test_core.py
Dylan/WorkflowSynthesisEngine/scripts/: launch_gui.py  launch_script_launcher.py
Dylan/WorkflowSynthesisEngine/tests/: test_db_orm.py  test_logging.py  test_mermaid.py  test_router.py  test_schemas.py  test_telemetry.py
(+101 files in other folders)
