
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cesar-src"
version = "1.0.3"
description = "CESAR-SRC: Multi-agent, multi-model workflow capture & synthesis (EJWCS core)."
authors = [{name = "CESAR"}]
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "networkx>=3.2",
  "httpx>=0.27",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
audio = ["azure-cognitiveservices-speech>=1.38"]
text-analytics = ["azure-ai-textanalytics>=5.3.0"]
export = ["graphviz>=0.20.3", "pillow>=10.0"]
ui = ["rich>=13.7", "pygments>=2.16"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
